--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,16 @@
 			<version>4.12.0</version>
 		</dependency>
 
+
+		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>7.8.0</version>
+			
+		</dependency>
+
+
 	</dependencies>
 
 </project>
