--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<profiles>
 		<profile>
-			<id>abcd</id>
+			<id>parallel</id>
 			<build>
 				<plugins>
 					<plugin>
@@ -25,8 +25,27 @@
 				</plugins>
 			</build>
 		</profile>
-		
-		
+
+
+		<profile>
+			<id>suite</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>3.1.2</version>
+						<configuration>
+							<suiteXmlFiles>
+								<suiteXmlFile>testngSuite.xml</suiteXmlFile>
+							</suiteXmlFiles>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+
 		<profile>
 			<id>crossbrowser</id>
 			<build>
@@ -44,7 +63,7 @@
 				</plugins>
 			</build>
 		</profile>
-		
+
 		<profile>
 			<id>read</id>
 			<build>
@@ -62,8 +81,8 @@
 				</plugins>
 			</build>
 		</profile>
-		
-		
+
+
 	</profiles>
 
 
